fix overflow in menu

--- a/src/Components/Menu/menu.module.css
+++ b/src/Components/Menu/menu.module.css
@@ -10,4 +10,5 @@
 .menu.show{
     height: calc(100vh - 60px);
     transition: height .3s ease .3s;
+    overflow-y: auto;
 }
